--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <html>
     <head></head>
     <body>
-        <span id="greeter"></span>
+        <div>
+            <input type="button" id="greetBtn" value="Greet" />
+            <span id="greetElem"></span>
+        </div>
         <script src='/build/bundle.js' charset='utf-8'></script>
     </body>
 </html>
