--- a/index.html
+++ b/index.html
@@ -1,10 +1,7 @@
 <html>
     <head></head>
     <body>
-        <div>
-            <input type="button" id="greetBtn" value="Greet" />
-            <span id="greetElem"></span>
-        </div>
+        <div id="root"></div>
         <script src='/build/bundle.js' charset='utf-8'></script>
     </body>
 </html>
